@@ -89,7 +89,7 @@ void LoginHandler::handleMessage(MessageIn *msg)
                         iptostring(server_info[i]->address),
                         server_info[i]->port);
             }
-            state = CHAR_SERVER_STATE; 
+            state = CHAR_SERVER_STATE;
             break;
 
         case 0x006a:
@@ -110,10 +110,10 @@ void LoginHandler::handleMessage(MessageIn *msg)
                     errorMessage = "Rejected from server";
                     break;
                 case 4:
-                    errorMessage = "You have been blocked by the GM Team";
+                    errorMessage = "You have been banned from the game. Please contact the GM Team";
                     break;
                 case 6:
-                    errorMessage = "You have been banned for 5 minutes";
+                    errorMessage = "You have been temporarily banned from the game. Please contact the GM team";
                     break;
                 case 9:
                     errorMessage = "This user name is already taken";
