@@ -1,3 +1,8 @@
+2008-08-28  Philipp Sehmisch  <tmw@crushnet.org>
+
+	* src/net/loginhandler.cpp: Removed the usually incorrect "for 5 minutes"
+	clause from the message displayed to banned users.
+
 2008-08-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/particleemitter.h, src/particle.h, src/particleemitter.cpp,
